--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,17 @@
-<project> xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.mat3e</groupId>
     <artifactId>hello</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>m
+    <packaging>war</packaging>
 
     <name>Hello World</name>
 
     <properties>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>11</java.version>
         <junit.version>4.12</junit.version>
@@ -19,6 +21,11 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
         <!-- tests -->
         <dependency>
             <groupId>junit</groupId>
@@ -69,6 +76,7 @@
 
     <build>
         <plugins>
+
             <plugin>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-maven-plugin</artifactId>
